# TODO-APP-vibecode_hackathon

./: .gitignore
phase_1/specs/: master
phase_1/src/: main.py
phase_2/.qwen/: settings.json
phase_2/backend/: main.py  pyproject.toml
phase_2/backend/alembic/: env.py
phase_2/backend/src/: config.py
phase_2/backend/tests/: test_api.py
phase_2/specs/002-todo-web-app-auth/: plan.md  quickstart.md  spec.md
todo_phase_1/: pyproject.toml
todo_phase_1/specs/1-todo-api-console/: data-model.md  plan.md  research.md  tasks.md
todo_phase_1/src/: main.py
todo_phase_2/: README.md  pyproject.toml
todo_phase_2/.specify/memory/: constitution.md
todo_phase_2/backend/: main.py  pyproject.toml
todo_phase_2/backend/tests/: test_auth.py
todo_phase_2/frontend/: package-lock.json  package.json
todo_phase_2/specs/002-todo-web-app-auth/: data-model.md
todo_phase_2/specs/1-todo-api-console/: spec.md
todo_phase_3/backend/: .dockerignore  Dockerfile  conversations.db  main.py  pyproject.toml
todo_phase_3/backend/src/: config.py
todo_phase_3/backend/src/api/: deps.py  routes_auth.py  routes_chat.py  routes_tasks.py  v1.py
todo_phase_3/backend/src/auth/: jwt.py  utils.py
todo_phase_3/backend/src/infra/: database.py  repo_factory.py
todo_phase_3/backend/src/infra/db_models/: converstation.py  message.py  models.py
todo_phase_3/backend/src/mcp/: __init__.py  server.py  tools.py  types.py
todo_phase_3/backend/src/services/: ai_service.py  ai_session_service.py  conversations.db
todo_phase_3/frontend/: package-lock.json  package.json
(+72 files in other folders)
