[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.127.1",
    "mypy>=1.19.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "ruff>=0.14.10",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "slowapi>=0.1.9",
    "starlette>=0.39.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "openai>=2.15.0",
    "openai-agents>=0.6.8",
    "sqlmodel>=0.0.31",
    "mcp[cli]>=1.25.0",
]
